fix(toggle): fixed toggle button margins on ios

--- a/app/client/stylesheets/components/pu-toggle.sass
+++ b/app/client/stylesheets/components/pu-toggle.sass
@@ -21,6 +21,8 @@
         position: relative
         margin-left: 1px
         margin-right: 1px
+        margin-top: 0px
+        margin-bottom: 0px
 
         &.pu-state-active
             color: $color-text
